Fix changelog PR comments and generate new files
Also updates the update-codegen script to work
on M3 Macs inside a Linux VM.

Signed-off-by: Nick Young <nick@isovalent.com>

--- a/CHANGELOG/1.2-CHANGELOG.md
+++ b/CHANGELOG/1.2-CHANGELOG.md
@@ -16,8 +16,9 @@ changes since v1.1.0:
 
 ## Release Cycle changes
 
-In this release, we moved to using a phased release cycle modeled on the
-[upstream Kubernetes release cycle](https://kubernetes.io/releases/release/).
+This was our first release using a new
+[release cycle](https://gateway-api.sigs.k8s.io/contributing/release-cycle/)
+that is meant to make Gateway API releases more frequent and predictable.
 
 There are now four phases:
 
@@ -46,9 +47,9 @@ Relevant PRs:
 The Standard channel is Gateway API's set of maximally-stable install files.
 Only features with the best testing and support are added to the standard
 channel. This channel should be considered GA or stable, and future changes
-will only be compatible changes.
+will be fully backwards compatible.
 
-### Infrastructure Labels and Annotations moved to Standard 🎉
+### Infrastructure Labels and Annotations 🎉
 
 [GEP-1867](https://gateway-api.sigs.k8s.io/geps/gep-1867/) added an
 `infrastructure` stanza to Gateway objects that is intended to carry
@@ -56,12 +57,12 @@ infrastructure configuration specific to that Gateway object.
 
 [GEP-1762](https://gateway-api.sigs.k8s.io/geps/gep-1762/) adds a section
 for `labels` and `annotations` to this stanza that specifies labels and
-annotations to be annotated to all Kubernetes resources created to fulfill
+annotations to be annotated to all resources created to fulfill
 that Gateway request.
 
 This feature can be used to affect the labels and annotations created on
-Loadbalancer Services by in-cluster implementations to fulfill the Gateway
-contract.
+LoadBalancer Services by in-cluster implementations to fulfill the Gateway
+contract or by Cloud Load Balancing resources created by Cloud Providers.
 
 This feature has graduated to Standard and is now considered GA or Stable.
 
@@ -69,16 +70,14 @@ This feature's name for conformance tests and GatewayClass status reporting
 is `GatewayInfrastructurePropagation`.
 
 This feature's status is **Extended**, meaning that it is _optional_ for
-implementations to support. Please see the implementation's
-`gatewayclass.status.supportedFeatures` stanza or the 
-[implementation feature list](https://gateway-api.sigs.k8s.io/implementations/v1.2/)
-once the final release is out to see if your implementation supports it.
+implementations to support. If you're using Experimental Channel, you can refer
+to the `supportedFeatures` field in the `status` of any GatewayClass.
 
 Relevant PRs:
 * Remove experimental from gateway infrastructure by @keithmattix in [#3272](https://github.com/kubernetes-sigs/gateway-api/pull/3272)
 * Validation for label keys and values according to Kubernetes specification by @snorwin in [#3284](https://github.com/kubernetes-sigs/gateway-api/pull/3284)
 
-### HTTPRoute Timeouts and Durations moved to Standard 🎉
+### HTTPRoute Timeouts and Durations 🎉
 
 The HTTPRoute `Timeouts` field on Route Rules has graduated to Standard and is
 now considered GA or Stable.
@@ -89,26 +88,26 @@ Request Timeouts. For more information, refer to
 
 The relevant feature names this for conformance tests and GatewayClass status
 reporting are:
+
 * `HTTPRouteRequestTimeout` for `httproute.spec.rules[].timeouts.request`
 * `HTTPRouteBackendTimeout` for `httproute.spec.rules[].timeouts.backendRequest`
 
 This feature's status is **Extended**, meaning that it is _optional_ for
-implementations to support. Please see the implementation's
-`gatewayclass.status.supportedFeatures` stanza or the 
-[implementation feature list](https://gateway-api.sigs.k8s.io/implementations/v1.2/)
-once the final release is out to see if your implementation supports it.
+implementations to support. If you're using Experimental Channel, you can refer
+to the `supportedFeatures` field in the `status` of any GatewayClass.
 
 Relevant PRs:
 * Graduate GEP-2257 and GEP-1742 to standard by @kflynn in [#3210](https://github.com/kubernetes-sigs/gateway-api/pull/3210)
 * GEP2257 Duration parsing by @xtineskim in [#3271](https://github.com/kubernetes-sigs/gateway-api/pull/3271)
 
-### BackendProtocol Support moved to Standard 🎉
+### BackendProtocol Support 🎉
 
 The previous coordinated work across both Gateway API and upstream
 Kubernetes which defined 3 new values for the AppProtocol field on
 Service Ports has graduated to Standard and is now considered GA or Stable.
 
 The values are:
+
 * `kubernetes.io/h2c` - HTTP/2 over cleartext as described in
   [RFC7540](https://www.rfc-editor.org/rfc/rfc7540)
 * `kubernetes.io/ws` - WebSocket over cleartext as described in
@@ -122,16 +121,15 @@ connections to Kubernetes Services. For more information, refer to [GEP
 
 The relevant feature names this for conformance tests and GatewayClass status
 reporting are:
+
 * `HTTPRouteBackendProtocolH2C` for H2C support, when
   `service.spec.ports[].appProtocol` is `kubernetes.io/h2c`.
 * `HTTPRouteBackendProtocolWebSocket` for Websocket support, when
   `service.spec.ports[].appProtocol` is `kubernetes.io/ws` or `kubernetes.io/wss`.
 
 This feature's status is **Extended**, meaning that it is _optional_ for
-implementations to support. Please see the implementation's
-`gatewayclass.status.supportedFeatures` stanza or the 
-[implementation feature list](https://gateway-api.sigs.k8s.io/implementations/v1.2/)
-once the final release is out to see if your implementation supports it.
+implementations to support. If you're using Experimental Channel, you can refer
+to the `supportedFeatures` field in the `status` of any GatewayClass.
 
 Relevant PRs:
 * Backend Protocol Selection is no longer experimental and is now part of HTTPRoute Extended Conformance by @dprotaso in [#3108](https://github.com/kubernetes-sigs/gateway-api/pull/3108)
@@ -139,9 +137,12 @@ Relevant PRs:
 ### Other Standard channel changes
 
 * Increased the limit on HTTPRoute matches from 8 to 64 by @howardjohn in [#3205](https://github.com/kubernetes-sigs/gateway-api/pull/3205)
-* SupportedFeatures field in Gateway Class status are now presented as a list of objects by @LiorLieberman in [#3200](https://github.com/kubernetes-sigs/gateway-api/pull/3200)
 * Adds the GatewayClassConditionReason "Unsupported" and clarifies when GatewayClassConditionReason "InvalidParameters" should be preferred by @mikemorris in [#3048](https://github.com/kubernetes-sigs/gateway-api/pull/3048)
 * HTTPRoute - 503 Status Code MAY be returned for Kubernetes Services who don't have any healthy endpoints by @dprotaso in [#3121](https://github.com/kubernetes-sigs/gateway-api/pull/3121)
+* Document the route kinds compatible for each protocolType by @abs007 in [#2263](https://github.com/kubernetes-sigs/gateway-api/pull/2263)
+* Move GEP-995 to Implementable by @guicassolato in [#3166](https://github.com/kubernetes-sigs/gateway-api/pull/3166)
+* Add policy label to BackendLBPolicy to make it recognizable in gwctl by @gauravkghildiyal in [#3195](https://github.com/kubernetes-sigs/gateway-api/pull/3195)
+* remove unnecessary S in ProtocolType validation by @spacewander in [#3185](https://github.com/kubernetes-sigs/gateway-api/pull/3185)
 
 ## Experimental Channel Additions and Changes
 
@@ -175,6 +176,7 @@ as yet, please see your implementation's documentation to see if it is
 supported.
 
 Relevant PRs:
+
 * Adds support for configuring retries in HTTPRoute by @mikemorris in [#3301](https://github.com/kubernetes-sigs/gateway-api/pull/3301)
 * Adds `retry` stanza within HTTPRouteRule to configure retrying unsuccessful requests to backends before sending a response to a client by @mikemorris in [#3199](https://github.com/kubernetes-sigs/gateway-api/pull/3199)
 
@@ -200,6 +202,7 @@ as yet, please see your implementation's documentation to see if it is
 supported.
 
 Relevant PRs:
+
 * Adding GEP 3171: Percentage-based Request Mirroring by @jakebennert in [#3178](https://github.com/kubernetes-sigs/gateway-api/pull/3178)
 * Add API for GEP-3171 by @jakebennert in [#3283](https://github.com/kubernetes-sigs/gateway-api/pull/3283)
 * Add Additional API Testing for GEP-3171 by @jakebennert in [#3302](https://github.com/kubernetes-sigs/gateway-api/pull/3302)
@@ -214,6 +217,7 @@ for the client certificate Gateways should use when connecting
 to Backends.
 
 The existing BackendTLSPolicy object has had additions as well:
+
 * Ability to specify SANs on BackendTLSPolicy
 * Add TLS options to BackendTLSPolicy to mirror TLS config on Gateways
 
@@ -233,6 +237,7 @@ as yet, please see your implementation's documentation to see if it is
 supported.
 
 Relevant PRs:
+
 * Add GEP-3155: Complete Backend mTLS Configuration by @mkosieradzki in [#3180](https://github.com/kubernetes-sigs/gateway-api/pull/3180)
 * add api changes according to gep-3155 by @LiorLieberman in [#3304](https://github.com/kubernetes-sigs/gateway-api/pull/3304)
 
@@ -259,6 +264,7 @@ as yet, please see your implementation's documentation to see if it is
 supported.
 
 Relevant PRs:
+
 * Implement of GEP-995 by @howardjohn in [#2985](https://github.com/kubernetes-sigs/gateway-api/pull/2985)
 * Docs: route rule name by @guicassolato in [3299](https://github.com/kubernetes-sigs/gateway-api/pull/3299)
 
@@ -266,11 +272,8 @@ Relevant PRs:
 
 ## Other specification changes
 
+* SupportedFeatures field in Gateway Class status are now presented as a list of objects by @LiorLieberman in [#3200](https://github.com/kubernetes-sigs/gateway-api/pull/3200)
 * Fix v1beta1 HTTPHeaderName alias by @spencerhance in [#3127](https://github.com/kubernetes-sigs/gateway-api/pull/3127)
-* Document the route kinds compatible for each protocolType by @abs007 in [#2263](https://github.com/kubernetes-sigs/gateway-api/pull/2263)
-* Move GEP-995 to Implementable by @guicassolato in [#3166](https://github.com/kubernetes-sigs/gateway-api/pull/3166)
-* Add policy label to BackendLBPolicy to make it recognizable in gwctl by @gauravkghildiyal in [#3195](https://github.com/kubernetes-sigs/gateway-api/pull/3195)
-* remove unnecessary S in ProtocolType validation by @spacewander in [#3185](https://github.com/kubernetes-sigs/gateway-api/pull/3185)
 * make update-codegen.sh runnable on Mac by @spacewander in [#3186](https://github.com/kubernetes-sigs/gateway-api/pull/3186)
 * Add conformance tests for in-cluster Gateway infrastructure by @keithmattix in [#3192](https://github.com/kubernetes-sigs/gateway-api/pull/3192)
 * Remove extra spacing in the API Specification aliases by @nuno-faria in [#3218](https://github.com/kubernetes-sigs/gateway-api/pull/3218)
@@ -297,6 +300,7 @@ GAMMA lead team.
 We've added two new GEP Reviewers: @kflynn and @arkodg
 
 Also promoted in the conformance team:
+
 * @LiorLieberman is now an Approver
 * @candita is now a Reviewer
 
@@ -306,6 +310,7 @@ Congratulations to everyone on the promotions, and thanks for your continued
 contributions to the Gateway API community!
 
 Relevant PRs:
+
 * Replace keithmattix as a mesh lead and replace with mikemorris by @keithmattix in [#3109](https://github.com/kubernetes-sigs/gateway-api/pull/3109)
 * docs: add Mattia Lavacca as Gateway API maintainer by @shaneutt in [#3231](https://github.com/kubernetes-sigs/gateway-api/pull/3231)
 * docs: add Flynn as a GEP reviewer by @shaneutt in [#3253](https://github.com/kubernetes-sigs/gateway-api/pull/3253)
@@ -391,10 +396,12 @@ Relevant PRs:
 ## Dependencies
 
 ### Added
+
 - cel.dev/expr: v0.15.0
 - github.com/planetscale/vtprotobuf: [0393e58](https://github.com/planetscale/vtprotobuf/tree/0393e58)
 
 ### Changed
+
 - cloud.google.com/go/compute/metadata: v0.2.3 → v0.3.0
 - github.com/cespare/xxhash/v2: [v2.2.0 → v2.3.0](https://github.com/cespare/xxhash/compare/v2.2.0...v2.3.0)
 - github.com/cncf/xds/go: [0fa0005 → 555b57e](https://github.com/cncf/xds/compare/0fa0005...555b57e)
