--- a/CHANGELOG/1.2-TEAM.md
+++ b/CHANGELOG/1.2-TEAM.md
@@ -5,9 +5,9 @@
 | Infrastructure Labels and Annotations | @keithmattix, @snorwin |
 | HTTPRoute Timeouts and Durations | @kflynn, @xtineskim |
 | BackendProtocol Support | @dprotaso |
-| HTTPRoute Retry | @mikemorris |
+| HTTPRoute Retries | @mikemorris |
 | Percentage-based request mirroring | @jakebennert |
 | Backend TLS Config improvments | @mkosieradzki, @LiorLieberman |
-| Named Route Rules | @howardjohn, @guicassolato |
+| Named Route Rules | @guicassolato, @howardjohn |
 | Conformance Profiles and Reports | @mlavacca, @shaneutt, @xtineskim |
-| Gateway API Maintainers | @robscott, @shaneutt, @youngnick, @mlavacca |
+| Gateway API Maintainers | @mlavacca, @robscott, @shaneutt, @youngnick  |
