Call out breaking SupportedFeatures change
Signed-off-by: Nick Young <nick@isovalent.com>

--- a/CHANGELOG/1.2-CHANGELOG.md
+++ b/CHANGELOG/1.2-CHANGELOG.md
@@ -169,6 +169,19 @@ gaining confidence with them before allowing them to go to Standard.
 
 **This channel may include features that are changed or removed later!**
 
+### BREAKING CHANGE
+
+The Experimental `supportedFeatures` field in GatewayClass `status` has changed
+from being a list of strings to being a list of objects/structs with a `name`
+field.
+
+This is to allow addding in extra information to each entry at a later date.
+
+Relevant PRs:
+
+* SupportedFeatures field in Gateway Class status are now presented as a list of
+  objects by @LiorLieberman in
+  [#3200](https://github.com/kubernetes-sigs/gateway-api/pull/3200)
 
 ### HTTPRoute Retry support
 
@@ -295,9 +308,6 @@ Relevant PRs:
 
 ## Other specification changes
 
-* SupportedFeatures field in Gateway Class status are now presented as a list of
-  objects by @LiorLieberman in
-  [#3200](https://github.com/kubernetes-sigs/gateway-api/pull/3200)
 * Fix v1beta1 HTTPHeaderName alias by @spencerhance in
   [#3127](https://github.com/kubernetes-sigs/gateway-api/pull/3127)
 * make update-codegen.sh runnable on Mac by @spacewander in
