--- a/CHANGELOG/0.x-CHANGELOG.md
+++ b/CHANGELOG/0.x-CHANGELOG.md
@@ -1089,7 +1089,7 @@ In this release, we've made two release channels available, `experimental` and
 `standard`.
 
 The `experimental` channel contains all resources and fields, while `standard`
-contains only resources that mave moved to beta status.
+contains only resources that have moved to beta status.
 
 We've also added a way to flag particular fields within a resource as
 experimental, and any fields marked in this way are only present in the
@@ -1274,7 +1274,7 @@ In this release, we've made two release channels available, `experimental` and
 `standard`.
 
 The `experimental` channel contains all resources and fields, while `standard`
-contains only resources that mave moved to beta status.
+contains only resources that have moved to beta status.
 
 We've also added a way to flag particular fields within a resource as
 experimental, and any fields marked in this way are only present in the
