--- a/CHANGELOG/1.1-CHANGELOG.md
+++ b/CHANGELOG/1.1-CHANGELOG.md
@@ -28,7 +28,7 @@ follow.
 
 ### Conformance suite improvements
 
-- Expose the grpc client interface as a conformance suite option (#3095, @snehachhabria)
+- Expose the gRPC client interface as a conformance suite option (#3095, @snehachhabria)
 
 # v1.1.0
 On behalf of Kubernetes SIG Network, we are pleased to announce the v1.1 release!
