--- a/site-src/implementations/v1.1.md
+++ b/site-src/implementations/v1.1.md
@@ -16,20 +16,21 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 ### HTTPRoute
 
-| Organization   | Project                       | Version            | GatewayPort8080    | HTTPRouteHostRewrite   | HTTPRoutePathRedirect   | HTTPRouteRequestMirror   | HTTPRouteResponseHeaderModification   | HTTPRouteSchemeRedirect   | HTTPRouteMethodMatching   | HTTPRoutePathRewrite   | HTTPRouteQueryParamMatching   | GatewayHTTPListenerIsolation   | GatewayStaticAddresses   | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteParentRefPort   | HTTPRoutePortRedirect   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   |
-|:---------------|:------------------------------|:-------------------|:-------------------|:-----------------------|:------------------------|:-------------------------|:--------------------------------------|:--------------------------|:--------------------------|:-----------------------|:------------------------------|:-------------------------------|:-------------------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-------------------------|:------------------------|:----------------------------------|:--------------------------|
-| GKE            | gke-gateway                   | 1.30.3-gke.1211000 | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :x:                       | :x:                    | :x:                           | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                      | :x:                     | :x:                               | :x:                       |
-| GKE            | gke-gateway                   | 1.30.3-gke.1211000 | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :x:                       | :x:                    | :x:                           | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                      | :x:                     | :x:                               | :x:                       |
-| GKE            | gke-gateway                   | 1.30.3-gke.1211000 | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :x:                       | :x:                    | :x:                           | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                      | :x:                     | :x:                               | :x:                       |
-| Kong           | kubernetes-ingress-controller | v3.2.0             | :x:                | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :x:                       | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                      | :x:                     | :x:                               | :x:                       |
-| Kong           | kubernetes-ingress-controller | v3.3.1             | :x:                | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :x:                       | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                      | :x:                     | :x:                               | :x:                       |
-| cilium         | cilium                        | v1.16.0            | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:             | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
-| envoyproxy     | envoy-gateway                 | v1.1.0             | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
-| istio          | istio                         | 1.22               | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
-| nginxinc       | nginx-gateway-fabric          | v1.3.0             | :white_check_mark: | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                      | :white_check_mark:      | :x:                               | :x:                       |
-| nginxinc       | nginx-gateway-fabric          | v1.4.0             | :white_check_mark: | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                      | :white_check_mark:      | :x:                               | :x:                       |
-| projectcontour | contour                       | v1.30.0            | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
-| traefik        | traefik                       | v3.1.0             | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :x:                      | :x:                                   | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                      | :white_check_mark:      | :x:                               | :x:                       |
+| Organization   | Project                       | Version            | GatewayPort8080    | HTTPRouteHostRewrite   | HTTPRoutePathRedirect   | HTTPRouteRequestMirror   | HTTPRouteResponseHeaderModification   | HTTPRouteSchemeRedirect   | HTTPRouteMethodMatching   | HTTPRoutePathRewrite   | HTTPRouteQueryParamMatching   | HTTPRouteParentRefPort   | GatewayHTTPListenerIsolation   | GatewayStaticAddresses   | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRoutePortRedirect   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   |
+|:---------------|:------------------------------|:-------------------|:-------------------|:-----------------------|:------------------------|:-------------------------|:--------------------------------------|:--------------------------|:--------------------------|:-----------------------|:------------------------------|:-------------------------|:-------------------------------|:-------------------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:------------------------|:----------------------------------|:--------------------------|
+| GKE            | gke-gateway                   | 1.30.3-gke.1211000 | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :x:                       | :x:                    | :x:                           | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                     | :x:                               | :x:                       |
+| GKE            | gke-gateway                   | 1.30.3-gke.1211000 | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :x:                       | :x:                    | :x:                           | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                     | :x:                               | :x:                       |
+| GKE            | gke-gateway                   | 1.30.3-gke.1211000 | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :x:                       | :x:                    | :x:                           | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                     | :x:                               | :x:                       |
+| Kong           | kubernetes-ingress-controller | v3.2.0             | :x:                | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :x:                       | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                     | :x:                               | :x:                       |
+| Kong           | kubernetes-ingress-controller | v3.3.1             | :x:                | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :x:                       | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                     | :x:                               | :x:                       |
+| airlock        | microgateway                  | v4.4.0             | :white_check_mark: | :x:                    | :x:                     | :x:                      | :x:                                   | :x:                       | :white_check_mark:        | :x:                    | :white_check_mark:            | :white_check_mark:       | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                     | :x:                               | :x:                       |
+| cilium         | cilium                        | v1.16.0            | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:       | :white_check_mark:             | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
+| envoyproxy     | envoy-gateway                 | v1.1.0             | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:       | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
+| istio          | istio                         | 1.22               | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:       | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
+| nginxinc       | nginx-gateway-fabric          | v1.3.0             | :white_check_mark: | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :white_check_mark:      | :x:                               | :x:                       |
+| nginxinc       | nginx-gateway-fabric          | v1.4.0             | :white_check_mark: | :white_check_mark:     | :x:                     | :x:                      | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :white_check_mark:      | :x:                               | :x:                       |
+| projectcontour | contour                       | v1.30.0            | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:       | :white_check_mark:             | :white_check_mark:       | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:      | :white_check_mark:                | :white_check_mark:        |
+| traefik        | traefik                       | v3.1.0             | :white_check_mark: | :white_check_mark:     | :white_check_mark:      | :x:                      | :x:                                   | :white_check_mark:        | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :x:                      | :x:                            | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :white_check_mark:      | :x:                               | :x:                       |
 
 ### GRPCRoute
 
