--- a/site-src/implementations/v1.2.md
+++ b/site-src/implementations/v1.2.md
@@ -16,35 +16,35 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 ### HTTPRoute
 
-| Organization   | Project                       | Version               | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRewrite   | HTTPRouteQueryParamMatching   | HTTPRouteResponseHeaderModification   | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRoutePathRedirect   | HTTPRoutePortRedirect   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteSchemeRedirect   | HTTPRouteParentRefPort   |
-|:---------------|:------------------------------|:----------------------|:-----------------------|:--------------------------|:-----------------------|:------------------------------|:--------------------------------------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:------------------------|:------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------|:-------------------------|
-| Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
-| cilium         | cilium                        | v1.17.0-pre.1         | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :x:                      |
-| envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
-| istio          | istio                         | 1.24.0-alpha.0        | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
+| Organization   | Project                       | Version               | Mode        | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRewrite   | HTTPRouteQueryParamMatching   | HTTPRouteResponseHeaderModification   | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRoutePathRedirect   | HTTPRoutePortRedirect   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteSchemeRedirect   | HTTPRouteParentRefPort   |
+|:---------------|:------------------------------|:----------------------|:------------|:-----------------------|:--------------------------|:-----------------------|:------------------------------|:--------------------------------------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:------------------------|:------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------|:-------------------------|
+| Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
+| cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :x:                      |
+| envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
+| istio          | istio                         | 1.24.0-alpha.0        | default     | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
 
 ### GRPCRoute
 
-| Organization   | Project                       | Version               | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
-|:---------------|:------------------------------|:----------------------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
-| Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | :x:                            | :x:                                | :x:                | :x:                      |
-| cilium         | cilium                        | v1.17.0-pre.1         | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| istio          | istio                         | 1.24.0-alpha.0        | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| Organization   | Project                       | Version               | Mode        | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
+|:---------------|:------------------------------|:----------------------|:------------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
+| Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :x:                            | :x:                                | :x:                | :x:                      |
+| cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| istio          | istio                         | 1.24.0-alpha.0        | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
 
 ### TLSRoute
 
-| Organization   | Project       | Version        | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
-|:---------------|:--------------|:---------------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
-| cilium         | cilium        | v1.17.0-pre.1  | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| envoyproxy     | envoy-gateway | v1.2.0-rc.1    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| istio          | istio         | 1.24.0-alpha.0 | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| Organization   | Project       | Version        | Mode    | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
+|:---------------|:--------------|:---------------|:--------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
+| cilium         | cilium        | v1.17.0-pre.1  | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| envoyproxy     | envoy-gateway | v1.2.0-rc.1    | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| istio          | istio         | 1.24.0-alpha.0 | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
 
 ## Mesh Profile
 
 ### HTTPRoute
 
-| Organization   | Project   | Version        | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRedirect   | HTTPRoutePathRewrite   | HTTPRoutePortRedirect   | HTTPRouteQueryParamMatching   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteResponseHeaderModification   | HTTPRouteSchemeRedirect   | MeshClusterIPMatching   | HTTPRouteParentRefPort   | MeshConsumerRoute   |
-|:---------------|:----------|:---------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:-----------------------|:--------------------------|:------------------------|:-----------------------|:------------------------|:------------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------------------|:--------------------------|:------------------------|:-------------------------|:--------------------|
-| cilium         | cilium    | v1.17.0-pre.1  | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :x:                      | :x:                 |
-| istio          | istio     | 1.24.0-alpha.0 | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :x:                     | :white_check_mark:       | :white_check_mark:  |
+| Organization   | Project   | Version        | Mode    | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRedirect   | HTTPRoutePathRewrite   | HTTPRoutePortRedirect   | HTTPRouteQueryParamMatching   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteResponseHeaderModification   | HTTPRouteSchemeRedirect   | MeshClusterIPMatching   | HTTPRouteParentRefPort   | MeshConsumerRoute   |
+|:---------------|:----------|:---------------|:--------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:-----------------------|:--------------------------|:------------------------|:-----------------------|:------------------------|:------------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------------------|:--------------------------|:------------------------|:-------------------------|:--------------------|
+| cilium         | cilium    | v1.17.0-pre.1  | default | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :x:                      | :x:                 |
+| istio          | istio     | 1.24.0-alpha.0 | default | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :x:                     | :white_check_mark:       | :white_check_mark:  |
