--- a/CHANGELOG/0.x-CHANGELOG.md
+++ b/CHANGELOG/0.x-CHANGELOG.md
@@ -1553,7 +1553,7 @@ The following changes have been made since v0.3.0:
 ### Small Changes
 * Extension points within match blocks from all Routes have been removed
   [#829](https://github.com/kubernetes-sigs/gateway-api/pull/829). Implements
-  [GEP-820](https://github.com/kubernetes-sigs/gateway-api/blob/main/geps/gep-820/index.md).
+  [GEP-820](https://gateway-api.sigs.k8s.io/geps/gep-820/).
   These extension points have been removed because they are currently not used,
   are poorly understood, and we don't have good use cases for them. We may
   consider re-adding them in the future.
