--- a/CHANGELOG/0.x-CHANGELOG.md
+++ b/CHANGELOG/0.x-CHANGELOG.md
@@ -1700,7 +1700,7 @@ The following changes have been made since v0.4.0-rc1:
 ### GEP implementations
 * Replace `CertificateRef` field with `CertificateRefs` in `GatewayTLSConfig`.
 [#852](https://github.com/kubernetes-sigs/gateway-api/pull/852). This implements
-[GEP-851](https://github.com/kubernetes-sigs/gateway-api/blob/main/geps/gep-851/index.md),
+[GEP-851](https://gateway-api.sigs.k8s.io/geps/gep-851/),
 Allow Multiple Certificate Refs per Gateway Listener.
 * Extension points within match blocks from all Routes have been removed
 [#829](https://github.com/kubernetes-sigs/gateway-api/pull/829). Implements
