Add back name change and change nginx kubernetes gateway to ngf

--- a/site-src/implementations/v1.2.md
+++ b/site-src/implementations/v1.2.md
@@ -23,7 +23,7 @@ Implementations only appear in this page if they pass Core conformance for the r
 | cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :x:                      |
 | envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
 | istio          | istio                         | 1.24                  | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
-| nginxinc       | nginx-gateway-fabric          | v1.5.0                | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
+| nginx          | nginx-gateway-fabric          | v1.5.0                | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
 | solo.io        | gloo-gateway                  | v1.18.0               | default     | :x:                | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
 | traefik        | traefik                       | v3.2                  | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :white_check_mark:            | :white_check_mark:                  | :x:                                         | :x:                       | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
 
@@ -35,7 +35,7 @@ Implementations only appear in this page if they pass Core conformance for the r
 | cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
 | envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
 | istio          | istio                         | 1.24                  | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| nginxinc       | nginx-gateway-fabric          | v1.5.0                | default     | :x:                            | :x:                                | :x:                | :x:                      |
+| nginx          | nginx-gateway-fabric          | v1.5.0                | default     | :x:                            | :x:                                | :x:                | :x:                      |
 | traefik        | traefik                       | v3.2                  | default     | :x:                            | :x:                                | :x:                | :x:                      |
 
 ### TLSRoute
@@ -45,7 +45,7 @@ Implementations only appear in this page if they pass Core conformance for the r
 | cilium         | cilium               | v1.17.0-pre.1 | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
 | envoyproxy     | envoy-gateway        | v1.2.0-rc.1   | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
 | istio          | istio                | 1.24          | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| nginxinc       | nginx-gateway-fabric | v1.5.0        | default | :x:                            | :x:                                | :x:                | :x:                      |
+| nginx          | nginx-gateway-fabric | v1.5.0        | default | :x:                            | :x:                                | :x:                | :x:                      |
 | traefik        | traefik              | v3.2          | default | :x:                            | :x:                                | :x:                | :x:                      |
 
 ## Mesh Profile
