Improve feature name readability in conformance reports
Add feature name processing to remove redundant prefixes and improve
readability in conformance comparison tables. Changes include:

- Remove "HTTPRoute" and "Gateway" prefixes from feature names
- Split camelCase words into space-separated words
- Add process_feature_name() function for consistent text processing
- Update generate_profiles_report() to use processed feature names

This makes the conformance reports easier to read

--- a/site-src/implementations/v1.0.md
+++ b/site-src/implementations/v1.0.md
@@ -42,7 +42,7 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 ### HTTPRoute
 
-| Organization   | Project   | Version   | HTTPRouteRequestTimeout   | HTTPRoutePathRedirect   | HTTPRouteRequestMirror   | HTTPRoutePathRewrite   | HTTPRouteMethodMatching   | HTTPRouteRequestMultipleMirrors   | HTTPRouteBackendTimeout   | HTTPRouteResponseHeaderModification   | HTTPRoutePortRedirect   | HTTPRouteSchemeRedirect   | HTTPRouteHostRewrite   | HTTPRouteQueryParamMatching   |
-|:---------------|:----------|:----------|:--------------------------|:------------------------|:-------------------------|:-----------------------|:--------------------------|:----------------------------------|:--------------------------|:--------------------------------------|:------------------------|:--------------------------|:-----------------------|:------------------------------|
-| istio          | istio     | 1.2       | :white_check_mark:        | :white_check_mark:      | :white_check_mark:       | :white_check_mark:     | :white_check_mark:        | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:      | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            |
-| kumahq         | kuma      | 2.6.0     | :x:                       | :white_check_mark:      | :white_check_mark:       | :white_check_mark:     | :white_check_mark:        | :x:                               | :x:                       | :white_check_mark:                    | :white_check_mark:      | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            |
+| Organization   | Project   | Version   | HTTPRoute Request Timeout   | HTTPRoute Path Redirect   | HTTPRoute Request Mirror   | HTTPRoute Path Rewrite   | HTTPRoute Method Matching   | HTTPRoute Request Multiple Mirrors   | HTTPRoute Backend Timeout   | HTTPRoute Response Header Modification   | HTTPRoute Port Redirect   | HTTPRoute Scheme Redirect   | HTTPRoute Host Rewrite   | HTTPRoute Query Param Matching   |
+|:---------------|:----------|:----------|:----------------------------|:--------------------------|:---------------------------|:-------------------------|:----------------------------|:-------------------------------------|:----------------------------|:-----------------------------------------|:--------------------------|:----------------------------|:-------------------------|:---------------------------------|
+| istio          | istio     | 1.2       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:         | :white_check_mark:       | :white_check_mark:          | :white_check_mark:                   | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:        | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               |
+| kumahq         | kuma      | 2.6.0     | :x:                         | :white_check_mark:        | :white_check_mark:         | :white_check_mark:       | :white_check_mark:          | :x:                                  | :x:                         | :white_check_mark:                       | :white_check_mark:        | :white_check_mark:          | :white_check_mark:       | :white_check_mark:               |
