--- a/site-src/implementations/v1.1.md
+++ b/site-src/implementations/v1.1.md
@@ -59,7 +59,7 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 ### HTTPRoute
 
-| Organization   | Project   | Version   | Mode    | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRedirect   | HTTPRoutePathRewrite   | HTTPRoutePortRedirect   | HTTPRouteQueryParamMatching   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteResponseHeaderModification   | HTTPRouteSchemeRedirect   | MeshClusterIPMatching   | MeshConsumerRoute   | HTTPRouteParentRefPort   |
-|:---------------|:----------|:----------|:--------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------|:--------------------------|:------------------------|:-----------------------|:------------------------|:------------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------------------|:--------------------------|:------------------------|:--------------------|:-------------------------|
-| cilium         | cilium    | v1.16.0   | default | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :white_check_mark:  | :x:                      |
-| istio          | istio     | 1.22      | default | :x:                           | :x:                                 | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :x:                     | :white_check_mark:  | :white_check_mark:       |
+| Organization   | Project   | Version   | Mode    | HTTPRoute Backend Protocol H2C   | HTTPRoute Backend Protocol Web Socket   | HTTPRoute Backend Request Header Modification   | HTTPRoute Backend Timeout   | HTTPRoute Host Rewrite   | HTTPRoute Method Matching   | HTTPRoute Path Redirect   | HTTPRoute Path Rewrite   | HTTPRoute Port Redirect   | HTTPRoute Query Param Matching   | HTTPRoute Request Mirror   | HTTPRoute Request Multiple Mirrors   | HTTPRoute Request Timeout   | HTTPRoute Response Header Modification   | HTTPRoute Scheme Redirect   | Mesh Cluster IP Matching   | Mesh Consumer Route   | HTTPRoute Parent Ref Port   |
+|:---------------|:----------|:----------|:--------|:---------------------------------|:----------------------------------------|:------------------------------------------------|:----------------------------|:-------------------------|:----------------------------|:--------------------------|:-------------------------|:--------------------------|:---------------------------------|:---------------------------|:-------------------------------------|:----------------------------|:-----------------------------------------|:----------------------------|:---------------------------|:----------------------|:----------------------------|
+| cilium         | cilium    | v1.16.0   | default | :white_check_mark:               | :white_check_mark:                      | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          | :white_check_mark:         | :white_check_mark:    | :x:                         |
+| istio          | istio     | 1.22      | default | :x:                              | :x:                                     | :white_check_mark:                              | :white_check_mark:          | :white_check_mark:       | :white_check_mark:          | :white_check_mark:        | :white_check_mark:       | :white_check_mark:        | :white_check_mark:               | :white_check_mark:         | :white_check_mark:                   | :white_check_mark:          | :white_check_mark:                       | :white_check_mark:          | :x:                        | :white_check_mark:    | :white_check_mark:          |
