--- a/CHANGELOG/0.x-CHANGELOG.md
+++ b/CHANGELOG/0.x-CHANGELOG.md
@@ -226,7 +226,7 @@ For more information refer to
 
 - Added the missing ReferenceGrant resource the kustomization.yaml for the
   standard channel (#2084, @howardjohn)
-- Webhook validation now ensures that BackendRefs can not be specified in the
+- Webhook validation now ensures that BackendRefs cannot be specified in the
   same HTTPRoute rule as a Redirect filter (#2161, @slayer321)
 - GRPCRoute: The default match has been removed as it was invalid (it only
   specified a type of "Exact" without a corresponding Service or Method). Note
@@ -407,7 +407,7 @@ For more information, refer to
 
 - Added the missing ReferenceGrant resource the kustomization.yaml for the
   standard channel (#2084, @howardjohn)
-- Webhook validation now ensures that BackendRefs can not be specified in the
+- Webhook validation now ensures that BackendRefs cannot be specified in the
   same HTTPRoute rule as a Redirect filter (#2161, @slayer321)
 
 # v0.7.1
@@ -1089,7 +1089,7 @@ In this release, we've made two release channels available, `experimental` and
 `standard`.
 
 The `experimental` channel contains all resources and fields, while `standard`
-contains only resources that mave moved to beta status.
+contains only resources that have moved to beta status.
 
 We've also added a way to flag particular fields within a resource as
 experimental, and any fields marked in this way are only present in the
@@ -1274,7 +1274,7 @@ In this release, we've made two release channels available, `experimental` and
 `standard`.
 
 The `experimental` channel contains all resources and fields, while `standard`
-contains only resources that mave moved to beta status.
+contains only resources that have moved to beta status.
 
 We've also added a way to flag particular fields within a resource as
 experimental, and any fields marked in this way are only present in the
