--- a/CHANGELOG/1.3-CHANGELOG.md
+++ b/CHANGELOG/1.3-CHANGELOG.md
@@ -44,7 +44,7 @@ requests has been clarified and now recommends that implementations return 421 H
 - A new conformance test was added to ensure `backendRef` filters don't affect weighted routing. ([#3604](https://github.com/kubernetes-sigs/gateway-api/pull/3604),[@dprotaso](https://github.com/dprotaso))
 
 #### Clarify reasons for certain object status conditions
-- Set proper reason for Gateway `parametersRef` `Accepted` condition when `parametersRef` is invalid. ([#3579](),[@mlavacca]())
+- Set proper reason for Gateway `parametersRef` `Accepted` condition when `parametersRef` is invalid. ([#3579](https://github.com/kubernetes-sigs/gateway-api/pull/3579),[@mlavacca](https://github.com/mlavacca))
 - Improve GatewayClass `GatewayClassReasonInvalidParameters` reason description. ([#3553](https://github.com/kubernetes-sigs/gateway-api/pull/3553)[@mlavacca](https://github.com/mlavacca))
 
 ### BackendTLSPolicy
